--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>Toboolist</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
+
   <body>
-    <header></header>
-    <main></main>
+    <!--heared -->
+    <header>
+      <div class="header-logo">
+        <img src="./img/Logo.png" alt="logo" />
+        <span class="logo">Toboolist</span>
+      </div>
+    </header>
+    <main>MAIN</main>
   </body>
 </html>
