--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="header-logo">
         <img src="./img/Logo.png" alt="logo" />
-        <span class="logo">Toboolist</span>
+        <strong class="logo">Toboolist</strong>
       </div>
     </header>
     <main>MAIN</main>
