add top container

--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
   <body>
     <!--heared -->
     <header>
-      <div class="header-logo">
-        <img src="./img/Logo.png" alt="logo" />
-        <strong class="logo">Toboolist</strong>
-      </div>
+      <img src="./img/Logo.png" alt="logo" />
+      <strong class="logo">Toboolist</strong>
     </header>
-    <main>MAIN</main>
+    <!-- /header-->
+
+    <main>
+      <!-- container -->
+      <div class="container">
+        <!-- top container -->
+        <div id="top-conteiner">
+          <a class="top-container-left"> Add task </a>
+          <a class="top-container-right"> Add section</a>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
