modified top container

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- container -->
       <div class="container">
         <!-- top container -->
-        <div id="top-conteiner">
+        <div id="top-container">
           <a class="top-container-left"> Add task </a>
           <a class="top-container-right"> Add section</a>
         </div>
