--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
           <a class="top-container-left"> Add task </a>
           <a class="top-container-right"> Add section</a>
         </div>
+        <!-- /top container -->
+
+        
+            <div class="task">
+                <h1> &#x1F604 New Task</h1> 
+                <span>Quarterly newsletter</span>
+             </div>
+             <div class="today">
+                <h1> &#x1F604 New Task</h1> 
+                <span>Quarterly newsletter</span>
+             </div>
+             <div class="Upcoming">
+                <h1> &#x1F604 New Task</h1> 
+                <span>Quarterly newsletter</span>
+             </div>
+
+        
       </div>
     </main>
   </body>
