add smal container

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         
             <div class="task">
                 <h1> &#x1F604 New Task</h1> 
-                <span>Quarterly newsletter</span>
+                <span>&cross Quarterly newsletter</span>
+                <div class="small-container">
+                    editorial
+
+                </div>
              </div>
              <div class="today">
                 <h1> &#x1F604 New Task</h1> 
