--- a/index.html
+++ b/index.html
@@ -28,20 +28,12 @@
         
             <div class="task">
                 <h1> &#x1F604 New Task</h1> 
+                <div class="small">
                 <span>&cross Quarterly newsletter</span>
-                <div class="small-container">
-                    editorial
-
-                </div>
+                <span class="small-container">
+                    editorial</span>
              </div>
-             <div class="today">
-                <h1> &#x1F604 New Task</h1> 
-                <span>Quarterly newsletter</span>
-             </div>
-             <div class="Upcoming">
-                <h1> &#x1F604 New Task</h1> 
-                <span>Quarterly newsletter</span>
-             </div>
+            </div>
 
         
       </div>
