--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="task">
                 <h1> &#x1F604 New Task</h1> 
                 <div class="small">
-                <span>&cross Quarterly newsletter</span>
+                <span> &cross; Quarterly newsletter</span>
                 <span class="small-container">
                     editorial</span>
              </div>
